Fix RSS button and login info alignment
Fixes #17817

--- a/css/default.css
+++ b/css/default.css
@@ -101,7 +101,7 @@ tr.bugnote .time-tracked,
 
 #page-title { font-size: 12pt; font-weight: bold; text-align: center }
 
-#login-info { clear: both; position: relative; display: block; float: left; padding: .5em 0; z-index: 100; line-height: 1em; }
+#login-info { clear: both; position: relative; display: block; float: left; padding: 2px 0; z-index: 100; line-height: 1em; }
 
 #logged-anon-label, #login-link, #signup-link { float: left; margin: .25em; padding: 0em; font-size: 1em; }
 #logged-anon-label { padding: 0 .5em; }
@@ -117,16 +117,18 @@ tr.bugnote .time-tracked,
 #logged-in:after { content: ')' ; }
 #logged-in-realname:after { content: ' - ' ; }
 
-#rss-feed { float: right; width: 16px; z-index: 0; padding: .5em 0; margin: 0; }
+#rss-feed { float: right; width: 16px; z-index: 0; padding: 0.2em 0; margin: 0; }
 
-#project-selector { border: none; float: right; z-index: 100; text-align: right; font-size: small; line-height: 1em; margin: 0 .5em 0 1em; }
-#project-selector label { padding: .5em; }
-#project-selector label:after { content: ':' }
-#project-selector select{ font-size: small; line-height: 1em; }
-#project-selector select{ font-size: small; line-height: 1em; }
-#project-selector .button { font-size: small; line-height: 1em; padding: 0; margin: 0; }
+#project-selector-div { border: none; float: right; z-index: 100; text-align: right; font-size: small; line-height: 1em; margin: 0 .5em 0 1em; padding: 0; }
+#project-selector-div label { padding: .5em; }
+#project-selector-div label:after { content: ':' }
+#project-selector-div select{ font-size: small; line-height: 1em; }
+#project-selector-div select{ font-size: small; line-height: 1em; }
+#project-selector-div .button { font-size: small; line-height: 1em; padding: 0; margin: 0; }
 
-#current-time{ width: 20%; margin: 0 auto; text-align: center; }
+#current-time{ width: 20%; margin: 0 auto; padding: 0; text-align: center;  }
+
+.info-bar { font-size: small; margin: 0.1em 0 0.4em 0; padding: .2em 0; }
 
 .main-menu { float: left; width: 100%; padding: 0; border: 1px solid #999; background-color: #e8e8e8; z-index: 99; }
 .main-menu ul { clear: left; float: left; list-style: none; position: relative; margin: 0; padding: .25em; }
